{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 71,
  "lineage": "49867cd5-1854-6723-a0be-a300e8d18b67",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:security-group/sg-03cfda9556a89ee34",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-03cfda9556a89ee34",
            "ingress": [],
            "name": "project1-eks-cluster-1-cluster-2025012823432558050000000e",
            "name_prefix": "project1-eks-cluster-1-cluster-",
            "owner_id": "339712782795",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "project1-eks-cluster-1",
              "Name": "project1-eks-cluster-1-cluster"
            },
            "tags_all": {
              "Example": "project1-eks-cluster-1",
              "Name": "project1-eks-cluster-1-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0155416319774689c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:security-group/sg-053a90963e0413b90",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-053a90963e0413b90",
            "ingress": [],
            "name": "project1-eks-cluster-1-node-2025012823432585130000000f",
            "name_prefix": "project1-eks-cluster-1-node-",
            "owner_id": "339712782795",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "project1-eks-cluster-1",
              "Name": "project1-eks-cluster-1-node",
              "kubernetes.io/cluster/project1-eks-cluster-1": "owned"
            },
            "tags_all": {
              "Example": "project1-eks-cluster-1",
              "Name": "project1-eks-cluster-1-node",
              "kubernetes.io/cluster/project1-eks-cluster-1": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0155416319774689c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2317180754",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03cfda9556a89ee34",
            "security_group_rule_id": "sgr-0499104c4d492afb8",
            "self": false,
            "source_security_group_id": "sg-053a90963e0413b90",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1160888738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-053a90963e0413b90",
            "security_group_rule_id": "sgr-0cc4019ee3440f6c1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-358549442",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053a90963e0413b90",
            "security_group_rule_id": "sgr-0e479df8210e3dce3",
            "self": false,
            "source_security_group_id": "sg-03cfda9556a89ee34",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3004798916",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053a90963e0413b90",
            "security_group_rule_id": "sgr-02c18853ed5e9c4a4",
            "self": false,
            "source_security_group_id": "sg-03cfda9556a89ee34",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2052845650",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053a90963e0413b90",
            "security_group_rule_id": "sgr-073a3b7d90959a429",
            "self": false,
            "source_security_group_id": "sg-03cfda9556a89ee34",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1762118771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053a90963e0413b90",
            "security_group_rule_id": "sgr-06e3ef997c8ed91d6",
            "self": false,
            "source_security_group_id": "sg-03cfda9556a89ee34",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-229048248",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053a90963e0413b90",
            "security_group_rule_id": "sgr-090efd1726f98625d",
            "self": false,
            "source_security_group_id": "sg-03cfda9556a89ee34",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2922042062",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053a90963e0413b90",
            "security_group_rule_id": "sgr-0fbaf37380471294c",
            "self": false,
            "source_security_group_id": "sg-03cfda9556a89ee34",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3031561507",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053a90963e0413b90",
            "security_group_rule_id": "sgr-07d3ef1a80a85ab6b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4185853724",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-053a90963e0413b90",
            "security_group_rule_id": "sgr-07f8627f183b4946a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1562422515",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-053a90963e0413b90",
            "security_group_rule_id": "sgr-03d21d8ede8e9a5b8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:network-acl/acl-064992b41161f08ea",
            "default_network_acl_id": "acl-064992b41161f08ea",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-064992b41161f08ea",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "339712782795",
            "subnet_ids": [
              "subnet-00e397a66364ff6f9",
              "subnet-0b18ba0e411dec3a9",
              "subnet-0b25289bfbb57b799",
              "subnet-0ba8034158ad756e4"
            ],
            "tags": {
              "Name": "project1-eks-cluster-1-default"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-default"
            },
            "vpc_id": "vpc-0155416319774689c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:route-table/rtb-066c1703e50316fc5",
            "default_route_table_id": "rtb-066c1703e50316fc5",
            "id": "rtb-066c1703e50316fc5",
            "owner_id": "339712782795",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "project1-eks-cluster-1-default"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0155416319774689c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:security-group/sg-0583c0e8956d864e7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0583c0e8956d864e7",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "339712782795",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project1-eks-cluster-1-default"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-default"
            },
            "vpc_id": "vpc-0155416319774689c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f7c0e9cbb2f1a36d",
            "arn": "arn:aws:ec2:us-east-2:339712782795:elastic-ip/eipalloc-0f7c0e9cbb2f1a36d",
            "domain": "vpc",
            "id": "eipalloc-0f7c0e9cbb2f1a36d",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-223-74-247.us-east-2.compute.amazonaws.com",
            "public_ip": "18.223.74.247",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "project1-eks-cluster-1-us-east-2a"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-us-east-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0636e639a332acb96",
            "arn": "arn:aws:ec2:us-east-2:339712782795:elastic-ip/eipalloc-0636e639a332acb96",
            "domain": "vpc",
            "id": "eipalloc-0636e639a332acb96",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-130-18-165.us-east-2.compute.amazonaws.com",
            "public_ip": "3.130.18.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "project1-eks-cluster-1-us-east-2b"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-us-east-2b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:internet-gateway/igw-00a44fb851216771f",
            "id": "igw-00a44fb851216771f",
            "owner_id": "339712782795",
            "tags": {
              "Name": "project1-eks-cluster-1"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1"
            },
            "vpc_id": "vpc-0155416319774689c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f7c0e9cbb2f1a36d",
            "association_id": "eipassoc-0cb527823acd20bf6",
            "connectivity_type": "public",
            "id": "nat-02ceaab896df7ed2e",
            "network_interface_id": "eni-01c0715f01c426b34",
            "private_ip": "10.123.1.215",
            "public_ip": "18.223.74.247",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0126b135c8e77b7c0",
            "tags": {
              "Name": "project1-eks-cluster-1-us-east-2a"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-us-east-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0636e639a332acb96",
            "association_id": "eipassoc-0508393070e5b226e",
            "connectivity_type": "public",
            "id": "nat-0ed67808daa99cc57",
            "network_interface_id": "eni-05547ae9f1591eab7",
            "private_ip": "10.123.2.130",
            "public_ip": "3.130.18.165",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b25289bfbb57b799",
            "tags": {
              "Name": "project1-eks-cluster-1-us-east-2b"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-us-east-2b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-083144cad1f308e9b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02ceaab896df7ed2e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-083144cad1f308e9b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-099643e19c6d98edf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ed67808daa99cc57",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-099643e19c6d98edf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00a44fb851216771f",
            "id": "r-rtb-0892af71d77d21dd81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0892af71d77d21dd8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:route-table/rtb-0c800e4d9bb288484",
            "id": "rtb-0c800e4d9bb288484",
            "owner_id": "339712782795",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project1-eks-cluster-1-intra"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-intra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0155416319774689c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:route-table/rtb-083144cad1f308e9b",
            "id": "rtb-083144cad1f308e9b",
            "owner_id": "339712782795",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project1-eks-cluster-1-private-us-east-2a"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-private-us-east-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0155416319774689c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:route-table/rtb-099643e19c6d98edf",
            "id": "rtb-099643e19c6d98edf",
            "owner_id": "339712782795",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project1-eks-cluster-1-private-us-east-2b"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-private-us-east-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0155416319774689c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:route-table/rtb-0892af71d77d21dd8",
            "id": "rtb-0892af71d77d21dd8",
            "owner_id": "339712782795",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project1-eks-cluster-1-public"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0155416319774689c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025e049ef8ec6e30d",
            "route_table_id": "rtb-0c800e4d9bb288484",
            "subnet_id": "subnet-00e397a66364ff6f9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a630e1de5f6bf12d",
            "route_table_id": "rtb-0c800e4d9bb288484",
            "subnet_id": "subnet-0ba8034158ad756e4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a03fd2fa9c3d0f4b",
            "route_table_id": "rtb-083144cad1f308e9b",
            "subnet_id": "subnet-0b18ba0e411dec3a9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049deae7b015dd6e4",
            "route_table_id": "rtb-099643e19c6d98edf",
            "subnet_id": "subnet-020c075b3843689e5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb950b173d4f618e",
            "route_table_id": "rtb-0892af71d77d21dd8",
            "subnet_id": "subnet-0126b135c8e77b7c0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2ae127b13dd40d2",
            "route_table_id": "rtb-0892af71d77d21dd8",
            "subnet_id": "subnet-0b25289bfbb57b799"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:subnet/subnet-00e397a66364ff6f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.123.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e397a66364ff6f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712782795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project1-eks-cluster-1-intra-us-east-2a"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-intra-us-east-2a"
            },
            "vpc_id": "vpc-0155416319774689c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:subnet/subnet-0ba8034158ad756e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.123.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba8034158ad756e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712782795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project1-eks-cluster-1-intra-us-east-2b"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-intra-us-east-2b"
            },
            "vpc_id": "vpc-0155416319774689c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:subnet/subnet-0b18ba0e411dec3a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.123.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b18ba0e411dec3a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712782795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project1-eks-cluster-1-private-us-east-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-private-us-east-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0155416319774689c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:subnet/subnet-020c075b3843689e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.123.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020c075b3843689e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712782795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project1-eks-cluster-1-private-us-east-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-private-us-east-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0155416319774689c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:subnet/subnet-0126b135c8e77b7c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0126b135c8e77b7c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712782795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project1-eks-cluster-1-public-us-east-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-public-us-east-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0155416319774689c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:subnet/subnet-0b25289bfbb57b799",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.123.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b25289bfbb57b799",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712782795",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project1-eks-cluster-1-public-us-east-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1-public-us-east-2b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0155416319774689c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339712782795:vpc/vpc-0155416319774689c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-064992b41161f08ea",
            "default_route_table_id": "rtb-066c1703e50316fc5",
            "default_security_group_id": "sg-0583c0e8956d864e7",
            "dhcp_options_id": "dopt-0321c8ad1b3665be7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0155416319774689c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066c1703e50316fc5",
            "owner_id": "339712782795",
            "tags": {
              "Name": "project1-eks-cluster-1"
            },
            "tags_all": {
              "Name": "project1-eks-cluster-1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}